test/name-resolution-errors.si
// RUN: ! silc %s --dump-resolved --split-input-file 2>&1 | FileCheck %s

mod Foo {
    // CHECK: error: unknown name `x`
    let a: uint<42> = x;
}

// -----

// CHECK: info: previous definition of `Foo` was here
mod Foo {}
// CHECK: error: name `Foo` already defined
mod Foo {}
